Svetlana: fix UI layout issue for 'Find teams near you' on ../teams page

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -108,3 +108,10 @@ a.list-group-item:focus {
   color: #ffffff;
   background-color: #ff6319;
 }
+
+.one-line {
+  width: 15%;
+  margin-right: 10px;
+  margin-top: 5px;
+  padding-bottom: -5px;
+}
